Map elements management